# buscarpy

./: .gitignore  README.md  pyproject.toml
buscarpy/: __init__.py
docs/: requirements.txt
docs/doctrees/: environment.pickle  index.doctree  installation.doctree
docs/doctrees/auto_examples/: index.doctree  plot_example.doctree  sg_execution_times.doctree
docs/doctrees/examples/: README.doctree
docs/doctrees/reference/: buscarpy.doctree  modules.doctree
docs/html/: .buildinfo
docs/source/: conf.py  installation.rst  requirements.txt
docs/source/auto_examples/: plot_example.ipynb  plot_example.py  plot_example.py.md5  plot_example.rst  plot_example_codeobj.pickle  searchindex  sg_execution_times.rst
docs/source/examples/: plot_example.py
docs/source/reference/: modules.rst
