[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "buscarpy"
version = "0.0.1"
authors = [
  { name="Max Callaghan", email="callaghan@mcc-berlin.net" },
]
description = "Calculate reliable stopping criteria for machine-learning prioritised screening in systematic reviews"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mcallaghan/buscarpy"
"Bug Tracker" = "https://github.com/mcallaghan/buscarpy/issues"
